# cassowary

./: .gitignore  .spi.yml  CMakeLists.txt  LICENSE  Package.swift  README.md
.github/workflows/: build.yml  coverage.yml
Source/: CMakeLists.txt  Constraint.swift  Expression.swift  Strength.swift  Term.swift  Variable.swift
Sources/: CMakeLists.txt
Sources/Cassowary/: Constraint.swift  Errors.swift  Expression.swift  Row.swift  Solver.swift  Strength.swift  Symbol.swift  Symbolics.swift  Term.swift  Variable.swift
Tests/: CMakeLists.txt  LinuxMain.swift  Tests.swift
Tests/CassowaryTests/: CMakeLists.txt  CassowaryTests.swift
